--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  <!-- Google 字體範例 -->
+  <!-- Google 字體 -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body style="font-family: 'Noto Sans TC', sans-serif;">
@@ -21,11 +21,12 @@
       <ul>
         <li><a href="#hero">首頁</a></li>
         <li><a href="#intro">專題介紹</a></li>
+        <li><a href="#characters">角色介紹</a></li>
+        <li><a href="#dreams">夢境展示</a></li>
         <li><a href="#production">製作過程</a></li>
         <li><a href="#showcase">成果展示</a></li>
         <li><a href="#team">團隊介紹</a></li>
         <li><a href="#outlook">展望</a></li>
-        <li><a href="questionnaire.html">問卷</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +36,8 @@
     <div class="overlay">
       <h1 data-aos="fade-up">脫癮而出</h1>
       <p data-aos="fade-up" data-aos-delay="200">探索 × 反思 × 重生</p>
-      <a href="#intro" class="btn" data-aos="zoom-in" data-aos-delay="400">開始</a>
+      <p data-aos="fade-up" data-aos-delay="300">一場網癮少年的夢境旅程</p>
+      <a href="#intro" class="btn" data-aos="zoom-in" data-aos-delay="400">開始探索</a>
     </div>
   </section>
 
@@ -44,12 +46,55 @@
     <div class="container">
       <div class="text" data-aos="fade-right">
         <h2>專題介紹</h2>
-        <p>這裡放專題的動機與故事大綱。  
-        例如：這部動畫探討「成癮與自我救贖」的議題，透過角色成長傳達希望的訊息。
-      然後右邊是一些示意圖</p>
+        <p>
+          《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
+          在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
+          某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
+          夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
+          在一次次的驚醒與困惑之間，他開始思考：<br>
+          👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
+        </p>
       </div>
       <div class="image" data-aos="fade-left">
         <img src="assets/images/night.jpg" alt="動畫插圖">
+      </div>
+    </div>
+  </section>
+
+  <!-- 角色介紹 -->
+  <section id="characters" class="section bg-light">
+    <h2 data-aos="fade-up">角色介紹</h2>
+    <div class="cards">
+      <div class="card" data-aos="zoom-in">
+        <h3>網癮少年</h3>
+        <p>孤單、冷漠，日復一日沉迷於手機。他的夢境，象徵他內心最深的恐懼與掙扎。</p>
+      </div>
+      <div class="card" data-aos="zoom-in" data-aos-delay="200">
+        <h3>未來的自己</h3>
+        <p>十年後的模樣，眼神空洞，身影憔悴。他是少年的警示，也是最可怕的未來。</p>
+      </div>
+      <div class="card" data-aos="zoom-in" data-aos-delay="400">
+        <h3>幻影阿公</h3>
+        <p>夢境中的引路人，他的出現象徵長輩的叮嚀與現實的提醒，但卻逐漸失真。</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- 夢境展示 -->
+  <section id="dreams" class="section">
+    <h2 data-aos="fade-up">夢境展示</h2>
+    <div class="cards">
+      <div class="card" data-aos="fade-right">
+        <h3>夢境一｜遺失時間</h3>
+        <p>無數時鐘與倒數計時，象徵他在手機中消逝的歲月。</p>
+      </div>
+      <div class="card" data-aos="fade-right" data-aos-delay="200">
+        <h3>夢境二｜虛擬幻境</h3>
+        <p>華麗的虛擬影像吸引著他，但現實的連結逐漸模糊。</p>
+      </div>
+      <div class="card" data-aos="fade-right" data-aos-delay="400">
+        <h3>夢境三｜自我對話</h3>
+        <p>與另一個自己相遇，逼迫他直面「要不要放下」的選擇。</p>
       </div>
     </div>
   </section>
@@ -79,11 +124,9 @@
     <div class="video" data-aos="fade-up" data-aos-delay="200">
       <iframe width="100%" height="500" src="https://www.youtube.com/embed/sample" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div class="gallery">
-      <img src="assets/images/toocrazycat.jpg" alt="劇照1" data-aos="fade-up">
-      <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="劇照2" data-aos="fade-up" data-aos-delay="200">
-      <img src="assets/images/mikusigo.gif" alt="劇照3" data-aos="fade-up" data-aos-delay="400">
-    </div>
+    <p style="text-align:center; margin-top:20px;" data-aos="fade-up">
+      🎥 觀看完整動畫短片，一同進入這場網癮少年的夢境旅程。
+    </p>
   </section>
 
   <!-- 團隊介紹 -->
@@ -93,34 +136,53 @@
       <div class="member" data-aos="flip-left">
         <img src="assets/images/toocrazycat.jpg" alt="成員1">
         <h3>園長</h3>
-        <p>色彩計畫</p>
+        <p>色彩規劃</p>
       </div>
       <div class="member" data-aos="flip-left">
         <img src="assets/images/chiwawa.jpg" alt="成員2">
         <h3>雲</h3>
         <p>角色設計</p>
       </div>
-        <div class="member" data-aos="flip-left">
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="成員1">
+      <div class="member" data-aos="flip-left">
+        <img src="assets/images/orengeeeeeeeee.jpg" alt="成員3">
         <h3>org</h3>
         <p>場景設計</p>
       </div>
-         <div class="member" data-aos="flip-left">
-        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="成員1">
+      <div class="member" data-aos="flip-left">
+        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="成員4">
         <h3>ibo</h3>
         <p>分鏡繪製</p>
       </div>
       <div class="member" data-aos="flip-left" data-aos-delay="200">
-        <img src="assets/images/mikusigo.gif" alt="成員2">
+        <img src="assets/images/mikusigo.gif" alt="成員5">
         <h3>miu</h3>
         <p>網頁設計</p>
+      </div>
     </div>
   </section>
+  <!-- 幕後花絮 -->
+  <section id="behind" class="section">
+    <h2 data-aos="fade-up">幕後花絮</h2>
+    <p data-aos="fade-up" data-aos-delay="200" style="text-align:center; max-width:800px; margin:0 auto 40px;">
+      從最初的發想到分鏡、角色設計，到深夜趕工完成動畫，這段旅程不只是挑戰，
+      更是我們團隊共同的回憶。這些幕後片段，紀錄了《脫癮而出》的誕生。
+    </p>
+    <div class="gallery" data-aos="fade-up" data-aos-delay="300">
+      <img src="assets/images/sketch.jpg" alt="分鏡草稿">
+      <img src="assets/images/work.jpg" alt="製作過程">
+      <img src="assets/images/teamwork.jpg" alt="團隊合作">
+    </div>
+  </section>
+
 
   <!-- 展望與回饋 -->
   <section id="outlook" class="section">
     <h2 data-aos="fade-up">展望與回饋</h2>
-    <p data-aos="fade-up" data-aos-delay="200">未來規劃：參加影展、持續推廣議題、製作續集。</p>
+    <p data-aos="fade-up" data-aos-delay="200">
+      《脫癮而出》是一場夢境與現實交錯的旅程，我們希望它能引起更多人對網路成癮的反思。<br>
+      未來，我們將持續推廣相關議題，並挑戰更多影展平台。<br><br>
+      歡迎你留下對我們的想法與建議！
+    </p>
     <form class="feedback-form" data-aos="fade-up" data-aos-delay="400">
       <input type="text" placeholder="您的名字">
       <textarea placeholder="留言或建議"></textarea>
