--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="#showcase">成果展示</a></li>
         <li><a href="#team">團隊介紹</a></li>
         <li><a href="#outlook">展望</a></li>
+        <li><a href="questionnaire.html">問卷</a></li>
       </ul>
     </nav>
   </header>
