--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <li><a href="#showcase">成果展示</a></li>
         <li><a href="#team">團隊介紹</a></li>
         <li><a href="#outlook">展望</a></li>
-        <li><a href="http://MOKA5011/tmdds/questionnaire.html">問卷</a></li>
       </ul>
     </nav>
   </header>
@@ -46,16 +45,21 @@
   <section id="intro" class="section">
     <div class="container">
       <div class="text" data-aos="fade-right">
-        <h2>專題介紹</h2>
-        <p>
-          《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
-          在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
-          某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
-          夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
-          在一次次的驚醒與困惑之間，他開始思考：<br>
-          👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
-        </p>
-      </div>
+  <h2>專題介紹</h2>
+  <p>
+    《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
+    在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
+    某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
+    夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
+    在一次次的驚醒與困惑之間，他開始思考：<br>
+    👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
+  </p>
+
+  <!-- 新增的前往問卷按鈕（置中） -->
+  <div style="text-align:center; margin-top:20px;">
+    <a href="questionnaire.html" class="btn" data-aos="zoom-in" data-aos-delay="200">📝 前往問卷</a>
+  </div>
+</div>
       <div class="image" data-aos="fade-left">
         <img src="assets/images/night.jpg" alt="動畫插圖">
       </div>
