--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   </p>
 
   <!-- 新增的前往問卷按鈕（置中） -->
-  <div style="text-align:center; margin-top:20px;">
-    <a href="questionnaire.html" class="btn" data-aos="zoom-in" data-aos-delay="200">📝 前往問卷</a>
+  <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
+    <a href="questionnaire.html" class="btn btn-glow" >📝 前往問卷</a>
   </div>
 </div>
       <div class="image" data-aos="fade-left">
