--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜動畫專題</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- AOS 動態效果 -->
@@ -58,8 +59,8 @@
   <!-- 新增的前往問卷按鈕（置中） -->
   <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
     <a href="questionnaire.html" class="btn btn-glow" >📝 前往問卷</a>
-  </div>
-</div>
+   </div>
+ </div>
       <div class="image" data-aos="fade-left">
         <img src="assets/images/night.jpg" alt="動畫插圖">
       </div>
