--- a/index.html
+++ b/index.html
@@ -43,29 +43,45 @@
   </section>
 
   <!-- 專題介紹 -->
-  <section id="intro" class="section">
-    <div class="container">
-      <div class="text" data-aos="fade-right">
-  <h2>專題介紹</h2>
-  <p>
-    《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
-    在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
-    某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
-    夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
-    在一次次的驚醒與困惑之間，他開始思考：<br>
-    👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
-  </p>
+<section id="intro" class="section">
+  <div class="container">
+    <div class="text" data-aos="fade-right">
+      <h2>專題介紹</h2>
+      <p>
+        《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
+        在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
+        某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
+        夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
+        在一次次的驚醒與困惑之間，他開始思考：<br>
+        👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
+      </p>
 
-  <!-- 新增的前往問卷按鈕（置中） -->
-  <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
-    <a href="questionnaire.html" class="btn btn-glow" >📝 前往問卷</a>
-   </div>
- </div>
-      <div class="image" data-aos="fade-left">
-        <img src="assets/images/night.jpg" alt="動畫插圖">
+      <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
+        <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
       </div>
     </div>
-  </section>
+
+    <div class="image-grid" data-aos="fade-left">
+      <div class="image"><img src="assets/images/stage1.png" alt="動畫插圖"></div>
+      <div class="image"><img src="assets/images/stage2.png" alt="動畫插圖"></div>
+      <div class="image"><img src="assets/images/stage3.png" alt="動畫插圖"></div>
+      <div class="image"><img src="assets/images/stage4.png" alt="動畫插圖"></div>
+      <div class="image"><img src="assets/images/stage5.png" alt="動畫插圖"></div>
+      <div class="image"><img src="assets/images/stage6.png" alt="動畫插圖"></div>
+    </div>
+  </div>
+</section>
+
+ <!-- 創作理念 -->
+<section id="concept" class="section no-glass">
+  <h2 data-aos="fade-up">創作理念</h2>
+  <p data-aos="fade-up" data-aos-delay="200">
+    在這個資訊爆炸的時代，我們的生活被螢幕與通知佔據，逐漸模糊了與真實世界的連結，即使有些人認為並沒有，但不可否認的是，這種現象已經不是個人的問題，而已經上升到社會的層面。<br><br>
+    《脫癮而出》不只是一部動畫，更是一場反思的旅程。我們希望透過夢境的象徵，用超現實的方式，描繪現代人面對科技成癮、依賴的掙扎與自我覺醒。<br><br>
+    每一個角色、每一段場景，都是我們對「放下」與「重生」的詮釋。<br>
+    💡 我們相信，當螢幕闔上，真正的故事才正要開始。
+  </p>
+</section>
 
   <!-- 角色介紹 -->
   <section id="characters" class="section bg-light">
