--- a/index.html
+++ b/index.html
@@ -207,10 +207,11 @@
   </p>
   <div class="gallery" data-aos="fade-up" data-aos-delay="300">
     <img src="assets/images/sketch.jpg" alt="分鏡草稿">
-    <video controls>
-      <source src="assets/videos/0903.mp4" type="video/mp4" alt="製作過程">
-      您的瀏覽器不支援影片播放。
-    </video>
+  <iframe 
+    src="https://www.youtube.com/embed/CuVHFfMx5Ns" 
+    frameborder="0" 
+    allowfullscreen>
+  </iframe>
     <img src="assets/images/teamwork.jpg" alt="團隊合作">
   </div>
 </section>
