--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,8 +15,9 @@
   <!-- Google 字體 -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body style="font-family: 'Noto Sans TC', sans-serif;">
 
+<body class="main-site">
+  <script src="js/modal.js"></script>
   <!-- 導覽列 -->
   <header class="navbar">
     <nav>
@@ -27,7 +29,7 @@
         <li><a href="#production">製作過程</a></li>
         <li><a href="#showcase">成果展示</a></li>
         <li><a href="#team">團隊介紹</a></li>
-        <li><a href="#outlook">展望</a></li>
+        <li><a href="#outlook">回饋</a></li>
       </ul>
     </nav>
   </header>
@@ -43,99 +45,115 @@
   </section>
 
   <!-- 專題介紹 -->
-<section id="intro" class="section">
-  <div class="container">
-    <div class="text" data-aos="fade-right">
-      <h2>專題介紹</h2>
-      <p>
-        《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
-        在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
-        某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
-        夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
-        在一次次的驚醒與困惑之間，他開始思考：<br>
-        👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
-      </p>
+  <section id="intro" class="section">
+    <div class="container">
+      <div class="text" data-aos="fade-right">
+        <h2>專題介紹</h2>
+        <p>
+          《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
+          在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
+          某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
+          夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
+          在一次次的驚醒與困惑之間，他開始思考：<br>
+          👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
+        </p>
 
-      <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
-        <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
+        <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
+          <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
+        </div>
+      </div>
+
+      <div class="image-grid" data-aos="fade-left">
+        <div class="image"><img src="assets/images/stage1.png" alt="動畫插圖"></div>
+        <div class="image"><img src="assets/images/stage2.png" alt="動畫插圖"></div>
+        <div class="image"><img src="assets/images/stage3.png" alt="動畫插圖"></div>
+        <div class="image"><img src="assets/images/stage4.png" alt="動畫插圖"></div>
+        <div class="image"><img src="assets/images/stage5.png" alt="動畫插圖"></div>
+        <div class="image"><img src="assets/images/stage6.png" alt="動畫插圖"></div>
       </div>
     </div>
+  </section>
 
-    <div class="image-grid" data-aos="fade-left">
-      <div class="image"><img src="assets/images/stage1.png" alt="動畫插圖"></div>
-      <div class="image"><img src="assets/images/stage2.png" alt="動畫插圖"></div>
-      <div class="image"><img src="assets/images/stage3.png" alt="動畫插圖"></div>
-      <div class="image"><img src="assets/images/stage4.png" alt="動畫插圖"></div>
-      <div class="image"><img src="assets/images/stage5.png" alt="動畫插圖"></div>
-      <div class="image"><img src="assets/images/stage6.png" alt="動畫插圖"></div>
-    </div>
-  </div>
-</section>
-
- <!-- 創作理念 -->
-<section id="concept" class="section no-glass">
-  <h2 data-aos="fade-up">創作理念</h2>
-  <p data-aos="fade-up" data-aos-delay="200">
-    在這個資訊爆炸的時代，我們的生活被螢幕與通知佔據，逐漸模糊了與真實世界的連結，即使有些人認為並沒有，但不可否認的是，這種現象已經不是個人的問題，而已經上升到社會的層面。<br><br>
-    《脫癮而出》不只是一部動畫，更是一場反思的旅程。我們希望透過夢境的象徵，用超現實的方式，描繪現代人面對科技成癮、依賴的掙扎與自我覺醒。<br><br>
-    每一個角色、每一段場景，都是我們對「放下」與「重生」的詮釋。<br>
-    💡 我們相信，當螢幕闔上，真正的故事才正要開始。
-  </p>
-</section>
+  <!-- 創作理念 -->
+  <section id="concept" class="section no-glass">
+    <h2 data-aos="fade-up">創作理念</h2>
+    <p data-aos="fade-up" data-aos-delay="200">
+      在這個資訊爆炸的時代，我們的生活被螢幕與通知佔據，逐漸模糊了與真實世界的連結，即使有些人認為並沒有，但不可否認的是，這種現象已經不是個人的問題，而已經上升到社會的層面。<br><br>
+      《脫癮而出》不只是一部動畫，更是一場反思的旅程。我們希望透過夢境的象徵，用超現實的方式，描繪現代人面對科技成癮、依賴的掙扎與自我覺醒。<br><br>
+      每一個角色、每一段場景，都是我們對「放下」與「重生」的詮釋。<br>
+      💡 我們相信，當螢幕闔上，真正的故事才正要開始。
+    </p>
+  </section>
 
   <!-- 角色介紹 -->
   <section id="characters" class="section bg-light">
     <h2 data-aos="fade-up">角色介紹</h2>
     <div class="cards">
-      <div class="card" data-aos="zoom-in">
+      <div class="card" onclick="showDetail(0,'characters')">
+        <img src="assets/images/char-boy.jpg" alt="網癮少年">
         <h3>網癮少年</h3>
-        <p>孤單、冷漠，日復一日沉迷於手機。他的夢境，象徵他內心最深的恐懼與掙扎。</p>
+        <p>孤單、冷漠，沉迷於手機的少年。</p>
       </div>
-      <div class="card" data-aos="zoom-in" data-aos-delay="200">
+      <div class="card" onclick="showDetail(1,'characters')">
+        <img src="assets/images/char-future.jpg" alt="未來的自己">
         <h3>未來的自己</h3>
-        <p>十年後的模樣，眼神空洞，身影憔悴。他是少年的警示，也是最可怕的未來。</p>
+        <p>十年後的模樣，眼神空洞，憔悴不堪。</p>
       </div>
-      <div class="card" data-aos="zoom-in" data-aos-delay="400">
+      <div class="card" onclick="showDetail(2,'characters')">
+        <img src="assets/images/char-grandpa.jpg" alt="幻影阿公">
         <h3>幻影阿公</h3>
-        <p>夢境中的引路人，他的出現象徵長輩的叮嚀與現實的提醒，但卻逐漸失真。</p>
+        <p>夢境中的引路人，象徵長輩的叮嚀。</p>
       </div>
     </div>
   </section>
 
-  <!-- 夢境展示 -->
+  <!-- 詳細介紹面板 -->
+  <div id="detailPanel" class="detail-panel">
+    <button class="arrow left" onclick="switchDetail(-1)">←</button>
+    <div class="detail-content">
+      <img id="detailImg" src="" alt="">
+      <h2 id="detailTitle"></h2>
+      <p id="detailText"></p>
+    </div>
+    <button class="arrow right" onclick="switchDetail(1)">→</button>
+  </div>
+
   <section id="dreams" class="section">
     <h2 data-aos="fade-up">夢境展示</h2>
     <div class="cards">
-      <div class="card" data-aos="fade-right">
+      <div class="card" onclick="showDetail(0,'dreams')">
+        <img src="assets/images/dream1.jpg" alt="夢境一">
         <h3>夢境一｜遺失時間</h3>
         <p>無數時鐘與倒數計時，象徵他在手機中消逝的歲月。</p>
       </div>
-      <div class="card" data-aos="fade-right" data-aos-delay="200">
+      <div class="card" onclick="showDetail(1,'dreams')">
+        <img src="assets/images/dream2.jpg" alt="夢境二">
         <h3>夢境二｜虛擬幻境</h3>
-        <p>華麗的虛擬影像吸引著他，但現實的連結逐漸模糊。</p>
+        <p>華麗的幻影吸引著他，但現實逐漸模糊。</p>
       </div>
-      <div class="card" data-aos="fade-right" data-aos-delay="400">
+      <div class="card" onclick="showDetail(2,'dreams')">
+        <img src="assets/images/dream3.jpg" alt="夢境三">
         <h3>夢境三｜自我對話</h3>
-        <p>與另一個自己相遇，逼迫他直面「要不要放下」的選擇。</p>
+        <p>與另一個自己相遇，逼迫他直面選擇。</p>
       </div>
     </div>
   </section>
 
-  <!-- 製作過程 -->
+
   <section id="production" class="section bg-light">
     <h2 data-aos="fade-up">製作過程</h2>
-    <div class="cards">
-      <div class="card" data-aos="zoom-in">
+    <div class="production-steps">
+      <div class="step" onclick="showDetail(0,'production')">
+        <img src="assets/images/dreamsingal.png" alt="分鏡設計">
         <h3>分鏡設計</h3>
-        <img src="assets/images/dreamsingal.png" alt="分鏡">
       </div>
-      <div class="card" data-aos="zoom-in" data-aos-delay="200">
+      <div class="step" onclick="showDetail(1,'production')">
+        <img src="assets/images/chiwawa.jpg" alt="角色設計">
         <h3>角色設計</h3>
-        <img src="assets/images/chiwawa.jpg" alt="角色">
       </div>
-      <div class="card" data-aos="zoom-in" data-aos-delay="400">
+      <div class="step" onclick="showDetail(2,'production')">
+        <img src="assets/images/orengeeeeeeeee.jpg" alt="場景設定">
         <h3>場景設定</h3>
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="場景">
       </div>
     </div>
   </section>
@@ -144,39 +162,39 @@
   <section id="showcase" class="section">
     <h2 data-aos="fade-up">成果展示</h2>
     <div class="video" data-aos="fade-up" data-aos-delay="200">
-      <iframe width="100%" height="500" src="https://www.youtube.com/embed/sample" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="500" src="https://www.youtube.com/embed/sample" frameborder="0"
+        allowfullscreen></iframe>
     </div>
     <p style="text-align:center; margin-top:20px;" data-aos="fade-up">
       🎥 觀看完整動畫短片，一同進入這場網癮少年的夢境旅程。
     </p>
   </section>
 
-  <!-- 團隊介紹 -->
   <section id="team" class="section bg-light">
     <h2 data-aos="fade-up">團隊介紹</h2>
     <div class="team-grid">
-      <div class="member" data-aos="flip-left">
-        <img src="assets/images/toocrazycat.jpg" alt="成員1">
+      <div class="member" onclick="showDetail(0,'team')">
+        <img src="assets/images/toocrazycat.jpg" alt="園長">
         <h3>園長</h3>
         <p>色彩規劃</p>
       </div>
-      <div class="member" data-aos="flip-left">
-        <img src="assets/images/chiwawa.jpg" alt="成員2">
+      <div class="member" onclick="showDetail(1,'team')">
+        <img src="assets/images/chiwawa.jpg" alt="雲">
         <h3>雲</h3>
         <p>角色設計</p>
       </div>
-      <div class="member" data-aos="flip-left">
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="成員3">
+      <div class="member" onclick="showDetail(2,'team')">
+        <img src="assets/images/orengeeeeeeeee.jpg" alt="org">
         <h3>org</h3>
         <p>場景設計</p>
       </div>
-      <div class="member" data-aos="flip-left">
-        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="成員4">
+      <div class="member" onclick="showDetail(3,'team')">
+        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="ibo">
         <h3>ibo</h3>
         <p>分鏡繪製</p>
       </div>
-      <div class="member" data-aos="flip-left" data-aos-delay="200">
-        <img src="assets/images/mikusigo.gif" alt="成員5">
+      <div class="member" onclick="showDetail(4,'team')">
+        <img src="assets/images/mikusigo.gif" alt="miu">
         <h3>miu</h3>
         <p>網頁設計</p>
       </div>
@@ -189,7 +207,7 @@
     <p data-aos="fade-up" data-aos-delay="200">
       《脫癮而出》是一場夢境與現實交錯的旅程，我們希望它能引起更多人對網路成癮的反思。<br>
       未來，我們將持續推廣相關議題，並挑戰更多影展平台。<br><br>
-      歡迎你留下對我們的想法與建議！
+      歡迎你留下對我們的想法與建議，對我做的網站有什麼建議和意見也可以告訴我們！
     </p>
     <form class="feedback-form" data-aos="fade-up" data-aos-delay="400">
       <input type="text" placeholder="您的名字">
@@ -203,18 +221,15 @@
     <h2 data-aos="fade-up">幕後花絮</h2>
     <p data-aos="fade-up" data-aos-delay="200" style="text-align:center; max-width:800px; margin:0 auto 40px;">
       從最初的發想到分鏡、角色設計，到深夜趕工完成動畫，這段旅程不只是挑戰，
-    更是我們團隊共同的回憶。這些幕後片段，紀錄了《脫癮而出》的誕生。
-  </p>
-  <div class="gallery" data-aos="fade-up" data-aos-delay="300">
-    <img src="assets/images/sketch.jpg" alt="分鏡草稿">
-  <iframe 
-    src="https://www.youtube.com/embed/CuVHFfMx5Ns" 
-    frameborder="0" 
-    allowfullscreen>
-  </iframe>
-    <img src="assets/images/teamwork.jpg" alt="團隊合作">
-  </div>
-</section>
+      更是我們團隊共同的回憶。這些幕後片段，紀錄了《脫癮而出》的誕生。
+    </p>
+    <div class="gallery" data-aos="fade-up" data-aos-delay="300">
+      <img src="assets/images/sketch.jpg" alt="分鏡草稿">
+      <iframe src="https://www.youtube.com/embed/CuVHFfMx5Ns" frameborder="0" allowfullscreen>
+      </iframe>
+      <img src="assets/images/teamwork.jpg" alt="團隊合作">
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
@@ -229,4 +244,5 @@
     });
   </script>
 </body>
+
 </html>
