--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 
 <body class="main-site">
-  <script src="js/modal.js"></script>
   <!-- 導覽列 -->
   <header class="navbar">
     <nav>
@@ -109,6 +108,7 @@
 
   <!-- 詳細介紹面板 -->
   <div id="detailPanel" class="detail-panel">
+    <button class="close-btn" onclick="closeDetail()">✕</button>
     <button class="arrow left" onclick="switchDetail(-1)">←</button>
     <div class="detail-content">
       <img id="detailImg" src="" alt="">
@@ -117,7 +117,7 @@
     </div>
     <button class="arrow right" onclick="switchDetail(1)">→</button>
   </div>
-
+  
   <section id="dreams" class="section">
     <h2 data-aos="fade-up">夢境展示</h2>
     <div class="cards">
@@ -161,10 +161,12 @@
   <!-- 成果展示 -->
   <section id="showcase" class="section">
     <h2 data-aos="fade-up">成果展示</h2>
-    <div class="video" data-aos="fade-up" data-aos-delay="200">
-      <iframe width="100%" height="500" src="https://www.youtube.com/embed/sample" frameborder="0"
-        allowfullscreen></iframe>
+
+    <div class="video-container" data-aos="fade-up" data-aos-delay="200">
+      <iframe src="https://www.youtube.com/embed/CuVHFfMx5Ns" frameborder="0" allowfullscreen>
+      </iframe>
     </div>
+
     <p style="text-align:center; margin-top:20px;" data-aos="fade-up">
       🎥 觀看完整動畫短片，一同進入這場網癮少年的夢境旅程。
     </p>
@@ -237,6 +239,7 @@
   </footer>
 
   <!-- 啟動 AOS -->
+  <script src="js/modal.js"></script>
   <script>
     AOS.init({
       duration: 1000,
