--- a/questionnaire.html
+++ b/questionnaire.html
@@ -15,6 +15,8 @@
     <section id="namePage" class="section">
       <div class="page-header">
         <h1>網路使用風險問卷</h1>
+        <n2>請誠實填寫以下問卷，您的資料將被嚴格保密<br />
+          以下問題沒有對錯，測驗結果只是提供一個參考</n2>
         <p>請先輸入您的姓名以開始答題</p>
       </div>
       <div style="max-width:400px;margin:auto;">
@@ -54,7 +56,7 @@
       <!-- JS 會填入分析內容 -->
     </section>
   </main>
-  
+
   <footer>
     <p>© 2025 脫癮而出專題團隊 | 聯絡：email@example.com</p>
   </footer>
