--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <body class="main-site">
   <!-- 導覽列 -->
   <header class="navbar">
+    <div class="logo">
+      <img src="你的logo路徑/logo.png" alt="Logo" />
+    </div>
     <nav>
       <ul>
         <li><a href="#hero">首頁</a></li>
@@ -155,7 +158,7 @@
 
       <!-- Step 2 -->
       <div class="timeline-step" data-aos="fade-up" data-aos-delay="300" onclick="showDetail(2,'production')">
-        <div class="step-number">3</div>
+        <div class="step-number">2</div>
         <h3>🎧 剪輯錄音</h3>
         <img src="assets/images/orengeeeeeeeee.jpg" alt="剪輯錄音">
         <p>聲音與畫面的融合，讓夢境更具沉浸感與情緒張力。</p>
@@ -163,7 +166,7 @@
 
       <!-- Step 3 -->
       <div class="timeline-step" data-aos="fade-up" data-aos-delay="200" onclick="showDetail(1,'production')">
-        <div class="step-number">2</div>
+        <div class="step-number">3</div>
         <h3>💻 網頁製作</h3>
         <img src="assets/images/chiwawa.jpg" alt="網頁製作">
         <p>將動畫主題延伸到互動網頁，讓觀眾能深入探索角色與理念。</p>
