--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+<canvas id="starfield"></canvas>
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜動畫專題</title>
   <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" href="css/style.css" />
+  <!-- CSS 檔案 -->
+  <link rel="stylesheet" href="css/style.css">
+   <!--<link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/sections.css">
+  <link rel="stylesheet" href="css/animations.css">
+  <link rel="stylesheet" href="css/utilities.css">
+  <link rel="stylesheet" href="css/responsive.css">-->
 
   <!-- AOS 動態效果 -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -42,12 +51,8 @@
 
   <!-- 首頁封面 -->
   <section id="hero" class="hero-section" style="background-image: url('assets/images/IMG_0127.png');">
-    <div class="overlay">
-      <h1 data-aos="fade-up">脫癮而出</h1>
-      <p data-aos="fade-up" data-aos-delay="200">探索 × 反思 × 重生</p>
-      <p data-aos="fade-up" data-aos-delay="300">一場網癮少年的夢境旅程</p>
-      <a href="#intro" class="btn" data-aos="zoom-in" data-aos-delay="400">開始探索</a>
-    </div>
+    <div class="overlay"></div>
+    <img src="assets/images/logo-02.png" alt="網站標題" class="hero-image">
   </section>
 
   <!-- 專題介紹 -->
@@ -92,26 +97,40 @@
   </section>
 
   <!-- 角色介紹 -->
-  <section id="characters" class="section bg-light">
-    <h2 data-aos="fade-up">角色介紹</h2>
-    <div class="cards">
-      <div class="card" onclick="showDetail(0,'characters')">
+  <section id="characters" class="section dark-section">
+    <h2 class="section-title">角色介紹</h2>
+
+    <div class="character-container">
+      <div class="character-image" onclick="showDetail(0,'characters')">
         <img src="assets/images/171.jpg" alt="網癮少年">
+      </div>
+      <div class="character-text">
         <h3>網癮少年</h3>
-        <p>孤單、冷漠，沉迷於手機的少年。</p>
+        <p>孤單、冷漠，日復一日沉迷於手機。他的夢境，象徵他內心最深的恐懼與掙扎。</p>
       </div>
-      <div class="card" onclick="showDetail(1,'characters')">
+    </div>
+
+    <div class="character-container reverse">
+      <div class="character-image" onclick="showDetail(1,'characters')">
         <img src="assets/images/dream2.jpg" alt="未來的自己">
-        <h3>未來的自己</h3>
-        <p>十年後的模樣，眼神空洞，憔悴不堪。</p>
       </div>
-      <div class="card" onclick="showDetail(2,'characters')">
+      <div class="character-text">
+        <h3>未來的自己</h3>
+        <p>十年後的模樣，眼神空洞，身影憔悴。他是少年的警示，也是最可怕的未來。</p>
+      </div>
+    </div>
+
+    <div class="character-container">
+      <div class="character-image" onclick="showDetail(2,'characters')">
         <img src="assets/images/char-grandpa.jpg" alt="幻影阿公">
+      </div>
+      <div class="character-text">
         <h3>幻影阿公</h3>
-        <p>夢境中的引路人，象徵長輩的叮嚀。</p>
+        <p>夢境中的引路人，他的出現象徵長輩的叮嚀與現實的提醒，但卻逐漸失真。</p>
       </div>
     </div>
   </section>
+
 
   <!-- 詳細介紹面板 -->
   <div id="detailPanel" class="detail-panel">
@@ -126,21 +145,35 @@
     <button class="arrow right" onclick="switchDetail(1)">▶</button>
   </div>
 
-  <section id="dreams" class="section">
-    <h2 data-aos="fade-up">夢境展示</h2>
-    <div class="cards">
-      <div class="card" onclick="showDetail(0,'dreams')">
+  <!-- 夢境展示 -->
+  <section id="dreams" class="section dark-section">
+    <h2 class="section-title">夢境展示</h2>
+
+    <div class="character-container">
+      <div class="character-image" onclick="showDetail(0,'dreams')">
         <img src="assets/images/dream1.jpg" alt="夢境一">
+      </div>
+      <div class="character-text">
         <h3>夢境一｜遺失時間</h3>
         <p>無數時鐘與倒數計時，象徵他在手機中消逝的歲月。</p>
       </div>
-      <div class="card" onclick="showDetail(1,'dreams')">
+    </div>
+
+    <div class="character-container reverse">
+      <div class="character-image" onclick="showDetail(1,'dreams')">
         <img src="assets/images/dream2.jpg" alt="夢境二">
+      </div>
+      <div class="character-text">
         <h3>夢境二｜虛擬幻境</h3>
         <p>華麗的幻影吸引著他，但現實逐漸模糊。</p>
       </div>
-      <div class="card" onclick="showDetail(2,'dreams')">
+    </div>
+
+    <div class="character-container">
+      <div class="character-image" onclick="showDetail(2,'dreams')">
         <img src="assets/images/dream3.jpg" alt="夢境三">
+      </div>
+      <div class="character-text">
         <h3>夢境三｜自我對話</h3>
         <p>與另一個自己相遇，逼迫他直面選擇。</p>
       </div>
@@ -148,36 +181,25 @@
   </section>
 
 
-  <section id="production" class="section bg-light">
-    <h2 data-aos="fade-up">製作過程</h2>
-
-    <div class="production-timeline">
-      <!-- Step 1 -->
-      <div class="timeline-step" data-aos="fade-up" data-aos-delay="100" onclick="showDetail(0,'production')">
-        <div class="step-number">1</div>
-        <h3>🎬 動畫繪製</h3>
-        <img src="assets/images/dreamsingal.png" alt="動畫繪製">
-        <p>從分鏡設計到逐格動畫繪製，是整部作品的靈魂建構。</p>
+  <!-- 製作過程 -->
+  <section id="production" class="section dark-section">
+    <h2 class="section-title">製作過程</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>分鏡設計</h3>
+        <img src="assets/images/dreamsingal.png" alt="分鏡">
       </div>
-
-      <!-- Step 2 -->
-      <div class="timeline-step" data-aos="fade-up" data-aos-delay="300" onclick="showDetail(2,'production')">
-        <div class="step-number">2</div>
-        <h3>🎧 剪輯錄音</h3>
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="剪輯錄音">
-        <p>聲音與畫面的融合，讓夢境更具沉浸感與情緒張力。</p>
+      <div class="card">
+        <h3>角色設計</h3>
+        <img src="assets/images/chiwawa.jpg" alt="角色">
       </div>
-
-      <!-- Step 3 -->
-      <div class="timeline-step" data-aos="fade-up" data-aos-delay="200" onclick="showDetail(1,'production')">
-        <div class="step-number">3</div>
-        <h3>💻 網頁製作</h3>
-        <img src="assets/images/chiwawa.jpg" alt="網頁製作">
-        <p>將動畫主題延伸到互動網頁，讓觀眾能深入探索角色與理念。</p>
+      <div class="card">
+        <h3>場景設定</h3>
+        <img src="assets/images/orengeeeeeeeee.jpg" alt="場景">
       </div>
-
     </div>
   </section>
+
 
   <!-- 成果展示 -->
   <section id="showcase" class="section">
@@ -193,36 +215,39 @@
     </p>
   </section>
 
-  <section id="team" class="section bg-light">
-    <h2 data-aos="fade-up">團隊介紹</h2>
+  <!-- 團隊介紹 -->
+  <section id="team" class="section dark-section">
+    <h2 class="section-title">團隊介紹</h2>
     <div class="team-grid">
-      <div class="member" onclick="showDetail(0,'team')">
-        <img src="assets/images/toocrazycat.jpg" alt="園長">
+      <div class="member">
+        <img src="assets/images/toocrazycat.jpg" alt="成員1">
         <h3>園長</h3>
         <p>色彩規劃</p>
       </div>
-      <div class="member" onclick="showDetail(1,'team')">
-        <img src="assets/images/chiwawa.jpg" alt="雲">
+      <div class="member">
+        <img src="assets/images/chiwawa.jpg" alt="成員2">
         <h3>雲</h3>
         <p>角色設計</p>
       </div>
-      <div class="member" onclick="showDetail(2,'team')">
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="org">
+      <div class="member">
+        <img src="assets/images/orengeeeeeeeee.jpg" alt="成員3">
         <h3>org</h3>
         <p>場景設計</p>
       </div>
-      <div class="member" onclick="showDetail(3,'team')">
-        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="ibo">
-        <h3>ibo</h3>
-        <p>分鏡繪製</p>
-      </div>
-      <div class="member" onclick="showDetail(4,'team')">
-        <img src="assets/images/mikusigo.gif" alt="miu">
-        <h3>miu</h3>
-        <p>網頁設計</p>
-      </div>
     </div>
   </section>
+
+  <!-- Modal 詳細介紹 -->
+  <div id="detailPanel" class="detail-panel">
+    <div class="detail-content">
+      <span class="close-btn" onclick="closeDetail()">×</span>
+      <img id="detailImg" src="" alt="detail">
+      <h2 id="detailTitle"></h2>
+      <p id="detailText"></p>
+      <div class="arrow left" onclick="switchDetail(-1)">&#10094;</div>
+      <div class="arrow right" onclick="switchDetail(1)">&#10095;</div>
+    </div>
+  </div>
 
   <!-- 展望與回饋 -->
   <section id="outlook" class="section">
