--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜動畫專題</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" type="image/png" href="favicon.png">
   <!-- CSS 檔案 -->
   <link rel="stylesheet" href="css/style.css">
    <!--<link rel="stylesheet" href="css/base.css">
@@ -55,24 +55,24 @@
     <img src="assets/images/logo-02.png" alt="網站標題" class="hero-image">
   </section>
 
-<!-- 專題介紹 -->
-<section id="intro" class="section">
-  <div class="container">
-    <div class="text" data-aos="fade-right">
-      <h2>專題介紹</h2>
-      <p>
-        《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
-        在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
-        某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
-        夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
-        在一次次的驚醒與困惑之間，他開始思考：<br>
-        👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
-      </p>
+  <!-- 專題介紹 -->
+  <section id="intro" class="section">
+    <div class="container">
+      <div class="text" data-aos="fade-right">
+        <h2>專題介紹</h2>
+        <p>
+          《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
+          在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
+          某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
+          夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
+          在一次次的驚醒與困惑之間，他開始思考：<br>
+          👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
+        </p>
 
-      <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
-        <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
+        <div style="text-align:center; margin-top:30px;" data-aos="fade-up" data-aos-delay="400">
+          <a href="questionnaire.html" class="btn btn-glow">📝 前往問卷</a>
+        </div>
       </div>
-    </div>
 
     <!-- 🔹 改成橫向滾動 -->
     <div class="scroll-gallery" data-aos="fade-left">
@@ -83,14 +83,22 @@
         <img src="assets/images/stage4.png" alt="動畫插圖">
         <img src="assets/images/stage5.png" alt="動畫插圖">
         <img src="assets/images/stage6.png" alt="動畫插圖">
+        <img src="assets/images/stage7.png" alt="動畫插圖">
+        <img src="assets/images/stage8.png" alt="動畫插圖">
+        <img src="assets/images/stage9.png" alt="動畫插圖">
+        <img src="assets/images/stage10.png" alt="動畫插圖">
+        <img src="assets/images/stage11.png" alt="動畫插圖">
+        <img src="assets/images/stage12.png" alt="動畫插圖">
+        <img src="assets/images/stage13.png" alt="動畫插圖">
+        <img src="assets/images/stage14.png" alt="動畫插圖">
+        <img src="assets/images/stage15.png" alt="動畫插圖">
       </div>
       <!-- 左右半透明漸層 -->
       <div class="fade fade-left"></div>
       <div class="fade fade-right"></div>
     </div>
   </div>
-</section>
-
+  </section>
 
   <!-- 創作理念 -->
   <section id="concept" class="section no-glass">
