Revamp styles and assets, update index and modal
Refactored CSS into modular files for base, layout, navbar, hero, cards, extras, modal, quiz, team, and reset. Updated and replaced multiple image assets, removed unused questionnaire styles and images, and revised index.html content and structure for characters, dreams, production steps, and team. Improved modal.js for mobile vertical scroll support. Various style and layout enhancements for consistency and responsiveness.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜動畫專題</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="websicon" type="png" href="favicon.png">
   <!-- CSS 檔案 -->
   <link rel="stylesheet" href="css/style.css">
    <!--<link rel="stylesheet" href="css/base.css">
@@ -120,28 +120,18 @@
         <img src="assets/images/171.jpg" alt="網癮少年">
       </div>
       <div class="character-text">
-        <h3>網癮少年</h3>
+        <h3>網癮少年和未來的他</h3>
         <p>孤單、冷漠，日復一日沉迷於手機。他的夢境，象徵他內心最深的恐懼與掙扎。</p>
       </div>
     </div>
 
     <div class="character-container reverse">
       <div class="character-image" onclick="showDetail(1,'characters')">
-        <img src="assets/images/dream2.jpg" alt="未來的自己">
+        <img src="assets/images/IMG_0184.png" alt="阿公和朋友">
       </div>
       <div class="character-text">
-        <h3>未來的自己</h3>
-        <p>十年後的模樣，眼神空洞，身影憔悴。他是少年的警示，也是最可怕的未來。</p>
-      </div>
-    </div>
-
-    <div class="character-container">
-      <div class="character-image" onclick="showDetail(2,'characters')">
-        <img src="assets/images/char-grandpa.jpg" alt="幻影阿公">
-      </div>
-      <div class="character-text">
-        <h3>幻影阿公</h3>
-        <p>夢境中的引路人，他的出現象徵長輩的叮嚀與現實的提醒，但卻逐漸失真。</p>
+        <h3>阿公和朋友</h3>
+        <p>夢境中的引路人，阿公的出現象徵長輩的叮嚀與現實的提醒，朋友則是逐漸將他拉出夢境。</p>
       </div>
     </div>
   </section>
@@ -176,17 +166,17 @@
 
     <div class="character-container reverse">
       <div class="character-image" onclick="showDetail(1,'dreams')">
-        <img src="assets/images/dream2.jpg" alt="夢境二">
+        <img src="assets/images/stage11.png" alt="夢境二">
       </div>
       <div class="character-text">
-        <h3>夢境二｜虛擬幻境</h3>
-        <p>華麗的幻影吸引著他，但現實逐漸模糊。</p>
+        <h3>夢境二｜不存在的另一人</h3>
+        <p>神秘的身影在黑暗中徘徊，似乎在嘲弄著他的孤獨。</p>
       </div>
     </div>
 
     <div class="character-container">
       <div class="character-image" onclick="showDetail(2,'dreams')">
-        <img src="assets/images/dream3.jpg" alt="夢境三">
+        <img src="assets/images/stage9.png" alt="夢境三">
       </div>
       <div class="character-text">
         <h3>夢境三｜自我對話</h3>
@@ -201,16 +191,16 @@
     <h2 class="section-title">製作過程</h2>
     <div class="cards">
       <div class="card">
-        <h3>分鏡設計</h3>
-        <img src="assets/images/dreamsingal.png" alt="分鏡">
+        <h3>角色設計</h3>
+        <img src="assets/images/IMG_0175.png" alt="分鏡">
       </div>
       <div class="card">
-        <h3>角色設計</h3>
+        <h3>動畫繪製</h3>
         <img src="assets/images/chiwawa.jpg" alt="角色">
       </div>
       <div class="card">
-        <h3>場景設定</h3>
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="場景">
+        <h3>網頁製作</h3>
+        <img src="assets/images/Fig3_638698518602273607.png" alt="場景">
       </div>
     </div>
   </section>
@@ -248,6 +238,16 @@
         <img src="assets/images/orengeeeeeeeee.jpg" alt="成員3">
         <h3>org</h3>
         <p>場景設計</p>
+      </div>
+      <div class="member">
+        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="成員4">
+        <h3>IBO</h3>
+        <p>動畫繪製</p>
+      </div>
+      <div class="member">
+        <img src="assets/images/mikusigo.gif" alt="成員5">
+        <h3>Miu</h3>
+        <p>網頁設計/配音</p>
       </div>
     </div>
   </section>
