--- a/index.html
+++ b/index.html
@@ -227,27 +227,27 @@
       <div class="member">
         <img src="assets/images/toocrazycat.jpg" alt="成員1">
         <h3>園長</h3>
-        <p>色彩規劃</p>
+        <p>動畫上色 部分線稿 分鏡表</p>
       </div>
       <div class="member">
         <img src="assets/images/chiwawa.jpg" alt="成員2">
         <h3>雲</h3>
-        <p>角色設計</p>
+        <p>角色設計 人物線稿 海報設計 動態草圖</p>
       </div>
       <div class="member">
         <img src="assets/images/orengeeeeeeeee.jpg" alt="成員3">
         <h3>org</h3>
-        <p>場景設計</p>
+        <p>動畫上色 部分線稿 分鏡表</p>
       </div>
       <div class="member">
         <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="成員4">
         <h3>IBO</h3>
-        <p>動畫繪製</p>
+        <p>部分上色 場景線稿 動態草圖</p>
       </div>
       <div class="member">
         <img src="assets/images/mikusigo.gif" alt="成員5">
         <h3>Miu</h3>
-        <p>網頁設計/配音</p>
+        <p>網頁製作 標準字設計 LOGO設計 剪輯 配音</p>
       </div>
     </div>
   </section>
