--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       <div class="text" data-aos="fade-right">
         <h2>專題介紹</h2>
         <p>
+          隨著科技的進步，網路與技術變得更加盛行，網路成癮的問題也隨之出現，其中最常見的則是「網路遊戲成癮(GAMING DISORDER)」。
+          2018年6月底，世界衛生組織正式宣布將「網路遊戲成癮」納入精神疾病。網路成癮造成的引響不只會對視力造成傷害，
+          最直接的影響是打亂時間，進而干擾學習、工作和日常生活及導致注意力不集中等等。青少年網路成癮的情況越來越常見，
+          甚至在你我之間可能就有網路成癮的風險。<br><br>
           《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
           在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
           某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
