--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜動畫專題</title>
-  <link rel="websicon" type="png" href="favicon.png">
-  <!-- CSS 檔案 -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="css/style.css" />
    <!--<link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/components.css">
@@ -53,6 +52,8 @@
   <section id="hero" class="hero-section" style="background-image: url('assets/images/IMG_0127.png');">
     <div class="overlay"></div>
     <img src="assets/images/logo-02.png" alt="網站標題" class="hero-image">
+    <p data-aos="fade-up" data-aos-delay="200">探索 × 反思 × 重生</p>
+    <p data-aos="fade-up" data-aos-delay="300">一場網癮少年的夢境旅程</p>
   </section>
 
   <!-- 專題介紹 -->
@@ -61,10 +62,6 @@
       <div class="text" data-aos="fade-right">
         <h2>專題介紹</h2>
         <p>
-          隨著科技的進步，網路與技術變得更加盛行，網路成癮的問題也隨之出現，其中最常見的則是「網路遊戲成癮(GAMING DISORDER)」。
-          2018年6月底，世界衛生組織正式宣布將「網路遊戲成癮」納入精神疾病。網路成癮造成的引響不只會對視力造成傷害，
-          最直接的影響是打亂時間，進而干擾學習、工作和日常生活及導致注意力不集中等等。青少年網路成癮的情況越來越常見，
-          甚至在你我之間可能就有網路成癮的風險。<br><br>
           《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
           在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
           某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
@@ -108,7 +105,12 @@
   <section id="concept" class="section no-glass">
     <h2 data-aos="fade-up">創作理念</h2>
     <p data-aos="fade-up" data-aos-delay="200">
+
       在這個資訊爆炸的時代，我們的生活被螢幕與通知佔據，逐漸模糊了與真實世界的連結，即使有些人認為並沒有，但不可否認的是，這種現象已經不是個人的問題，而已經上升到社會的層面。<br><br>
+      隨著科技的進步，網路與技術變得更加盛行，網路成癮的問題也隨之出現，其中最常見的則是「網路遊戲成癮(GAMING DISORDER)」。
+      2018年6月底，世界衛生組織正式宣布將「網路遊戲成癮」納入精神疾病。網路成癮造成的引響不只會對視力造成傷害，
+      最直接的影響是打亂時間，進而干擾學習、工作和日常生活及導致注意力不集中等等。青少年網路成癮的情況越來越常見，
+      甚至在你我之間可能就有網路成癮的風險。<br><br>
       《脫癮而出》不只是一部動畫，更是一場反思的旅程。我們希望透過夢境的象徵，用超現實的方式，描繪現代人面對科技成癮、依賴的掙扎與自我覺醒。<br><br>
       每一個角色、每一段場景，都是我們對「放下」與「重生」的詮釋。<br>
       💡 我們相信，當螢幕闔上，真正的故事才正要開始。
