--- a/questionnaire.html
+++ b/questionnaire.html
@@ -10,6 +10,23 @@
 </head>
 
 <body class="questionnaire-site">
+  <div id="preloader">
+    <div class="preloader-content">
+      <img src="assets/images/logo.png" alt="網站 LOGO" class="preloader-logo">
+      <div class="preloader-cube">
+        <div class="cube">
+          <div class="cube__inner"></div>
+        </div>
+        <div class="cube">
+          <div class="cube__inner"></div>
+        </div>
+        <div class="cube">
+          <div class="cube__inner"></div>
+        </div>
+      </div>
+      <p class="loading-text">載入中，請稍候...</p>
+    </div>
+  </div>
   <main>
     <!-- 姓名輸入頁 -->
     <section id="namePage" class="section">
