--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>脫癮而出｜動畫專題</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="css/style.css" />
-   <!--<link rel="stylesheet" href="css/base.css">
+  <!--<link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/sections.css">
@@ -25,6 +25,24 @@
 </head>
 
 <body class="main-site">
+  <div id="preloader">
+    <div class="preloader-content">
+      <img src="assets/images/logo.png" alt="網站 LOGO" class="preloader-logo">
+      <div class="preloader-cube">
+        <div class="cube">
+          <div class="cube__inner"></div>
+        </div>
+        <div class="cube">
+          <div class="cube__inner"></div>
+        </div>
+        <div class="cube">
+          <div class="cube__inner"></div>
+        </div>
+      </div>
+      <p class="loading-text">載入中，請稍候...</p>
+    </div>
+  </div>
+
   <!-- 導覽列 -->
   <header class="navbar">
     <div class="logo">
@@ -59,13 +77,14 @@
   <!-- 專題介紹 -->
   <section id="intro" class="section">
     <div class="container">
-      <div class="text" data-aos="fade-right">
+      <!-- 左側文字 -->
+      <div class="text" data-aos="fade-up">
         <h2>專題介紹</h2>
         <p>
-          《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，
-          在孤單與麻木的生活裡，逐漸迷失自我。<br><br>
-          某天，他意外陷入一場奇異的夢境：螢幕上的 APP 不斷提醒他的「網路成癮程度」，
-          夢境中的幻象逐漸失控，他甚至遇見了未來墮落的自己。<br><br>
+          《脫癮而出》是一部以動畫形式呈現的故事，描繪一名沉迷於手機的少年，<br><br>
+          在孤單與麻木的生活裡，逐漸迷失自我。某天，他意外陷入一場奇異的夢境：<br>
+          螢幕上的 APP 不斷提醒他的「網路成癮程度」，夢境中的幻象逐漸失控，<br>
+          他甚至遇見了未來墮落的自己。<br><br>
           在一次次的驚醒與困惑之間，他開始思考：<br>
           👉 當螢幕闔上，我們是否還記得如何與真實世界連結？
         </p>
@@ -75,30 +94,29 @@
         </div>
       </div>
 
-    <!-- 🔹 改成橫向滾動 -->
-    <div class="scroll-gallery" data-aos="fade-left">
-      <div class="scroll-track">
-        <img src="assets/images/stage1.png" alt="動畫插圖">
-        <img src="assets/images/stage2.png" alt="動畫插圖">
-        <img src="assets/images/stage3.png" alt="動畫插圖">
-        <img src="assets/images/stage4.png" alt="動畫插圖">
-        <img src="assets/images/stage5.png" alt="動畫插圖">
-        <img src="assets/images/stage6.png" alt="動畫插圖">
-        <img src="assets/images/stage7.png" alt="動畫插圖">
-        <img src="assets/images/stage8.png" alt="動畫插圖">
-        <img src="assets/images/stage9.png" alt="動畫插圖">
-        <img src="assets/images/stage10.png" alt="動畫插圖">
-        <img src="assets/images/stage11.png" alt="動畫插圖">
-        <img src="assets/images/stage12.png" alt="動畫插圖">
-        <img src="assets/images/stage13.png" alt="動畫插圖">
-        <img src="assets/images/stage14.png" alt="動畫插圖">
-        <img src="assets/images/stage15.png" alt="動畫插圖">
+      <!-- 右側橫向圖片畫廊 -->
+      <div class="scroll-gallery" data-aos="fade-left">
+        <div class="scroll-track">
+          <img src="assets/images/stage1.png" alt="動畫插圖">
+          <img src="assets/images/stage2.png" alt="動畫插圖">
+          <img src="assets/images/stage3.png" alt="動畫插圖">
+          <img src="assets/images/stage4.png" alt="動畫插圖">
+          <img src="assets/images/stage5.png" alt="動畫插圖">
+          <img src="assets/images/stage6.png" alt="動畫插圖">
+          <img src="assets/images/stage7.png" alt="動畫插圖">
+          <img src="assets/images/stage8.png" alt="動畫插圖">
+          <img src="assets/images/stage9.png" alt="動畫插圖">
+          <img src="assets/images/stage10.png" alt="動畫插圖">
+          <img src="assets/images/stage11.png" alt="動畫插圖">
+          <img src="assets/images/stage12.png" alt="動畫插圖">
+          <img src="assets/images/stage13.png" alt="動畫插圖">
+          <img src="assets/images/stage14.png" alt="動畫插圖">
+          <img src="assets/images/stage15.png" alt="動畫插圖">
+        </div>
+        <div class="fade fade-left"></div>
+        <div class="fade fade-right"></div>
       </div>
-      <!-- 左右半透明漸層 -->
-      <div class="fade fade-left"></div>
-      <div class="fade fade-right"></div>
     </div>
-  </div>
   </section>
 
   <!-- 創作理念 -->
@@ -175,7 +193,7 @@
         <img src="assets/images/stage11.png" alt="夢境二">
       </div>
       <div class="character-text">
-        <h3>夢境二｜不存在的另一人</h3>
+        <h3>夢境二｜不存在的外人</h3>
         <p>神秘的身影在黑暗中徘徊，似乎在嘲弄著他的孤獨。</p>
       </div>
     </div>
@@ -202,11 +220,23 @@
       </div>
       <div class="card">
         <h3>動畫繪製</h3>
-        <img src="assets/images/chiwawa.jpg" alt="角色">
+        <img src="assets/images/0916(1).gif" alt="角色">
       </div>
       <div class="card">
         <h3>網頁製作</h3>
-        <img src="assets/images/Fig3_638698518602273607.png" alt="場景">
+        <img src="assets/images/hfhd(1).gif" alt="網頁製作">
+      </div>
+      <div class="card">
+        <h3>錄音</h3>
+        <img src="assets/images/1638370137309.jpg" alt="錄音">
+      </div>
+      <div class="card">
+        <h3>周邊商品</h3>
+        <img src="assets/images/1750254680466.jpg" alt="周邊">
+      </div>
+      <div class="card">
+        <h3>討論</h3>
+        <img src="assets/images/IMG20250918104323.jpg" alt="討論">
       </div>
     </div>
   </section>
@@ -217,7 +247,7 @@
     <h2 data-aos="fade-up">成果展示</h2>
 
     <div class="video-container" data-aos="fade-up" data-aos-delay="200">
-      <iframe src="https://www.youtube.com/embed/2BOyp-xH-no" frameborder="0" allowfullscreen>
+      <iframe src="https://www.youtube.com/embed/dHXs3RVlEv0" frameborder="0" allowfullscreen>
       </iframe>
     </div>
 
@@ -230,28 +260,28 @@
   <section id="team" class="section dark-section">
     <h2 class="section-title">團隊介紹</h2>
     <div class="team-grid">
-      <div class="member">
-        <img src="assets/images/toocrazycat.jpg" alt="成員1">
+      <div class="member" onclick="showDetail(0,'team')">
+        <img src="assets/images/cb24cf96bf40fb30cd48e4008eb6b0dsda3a.jpg" alt="成員1">
         <h3>園長</h3>
         <p>動畫上色 部分線稿 分鏡表</p>
       </div>
-      <div class="member">
-        <img src="assets/images/chiwawa.jpg" alt="成員2">
+      <div class="member" onclick="showDetail(1,'team')">
+        <img src="assets/images/0c68677f46d2fae9df1eeb766391e903yter.jpg" alt="成員2">
         <h3>雲</h3>
         <p>角色設計 人物線稿 海報設計 動態草圖</p>
       </div>
-      <div class="member">
-        <img src="assets/images/orengeeeeeeeee.jpg" alt="成員3">
+      <div class="member" onclick="showDetail(2,'team')">
+        <img src="assets/images/cf89dffe11bbd0019919fc7c02d3hfgs2e9e.jpg" alt="成員3">
         <h3>org</h3>
         <p>動畫上色 部分線稿 分鏡表</p>
       </div>
-      <div class="member">
-        <img src="assets/images/BROOOOOOOOOOOOOOOOOO.jpg" alt="成員4">
+      <div class="member" onclick="showDetail(3,'team')">
+        <img src="assets/images/288e200da732ba5867c98b3da3bddggd754.jpg" alt="成員4">
         <h3>IBO</h3>
         <p>部分上色 場景線稿 動態草圖</p>
       </div>
-      <div class="member">
-        <img src="assets/images/mikusigo.gif" alt="成員5">
+      <div class="member" onclick="showDetail(4,'team')">
+        <img src="assets/images/cf3245f7e478be8444179bc4f2gdgsaa5fb6.jpg" alt="成員5">
         <h3>Miu</h3>
         <p>網頁製作 標準字設計 LOGO設計 剪輯 配音</p>
       </div>
