--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <!-- 導覽列 -->
   <header class="navbar">
     <div class="logo">
-      <img src="assets/images/logo.png" alt="Logo" />
+      <img src="assets/images/logo.png" alt="主 Logo" />
+      <img src="assets/images/logo-02.png" alt="文字 Logo" class="logo-text" />
     </div>
 
     <button class="navbar-toggle">☰</button>
