--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>脫癮而出｜動畫專題</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <title>脫癮而出｜專題動畫</title>
+  <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css" />
-  <!--<link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="css/sections.css">
-  <link rel="stylesheet" href="css/animations.css">
-  <link rel="stylesheet" href="css/utilities.css">
-  <link rel="stylesheet" href="css/responsive.css">-->
-
   <!-- AOS 動態效果 -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
