--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>脫癮而出｜專題動畫</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="logo.png" type="image/png">
   <link rel="stylesheet" href="css/style.css" />
   
   <!-- AOS 動態效果 -->
@@ -61,7 +61,7 @@
 
 
   <!-- 首頁封面 -->
-  <section id="hero" class="hero-section" style="background-image: url('assets/images/IMG_0127.png');">
+  <section id="hero" class="hero-section" style="background-image: url('assets/images/IMG_0213.jpg');">
     <div class="overlay"></div>
     <img src="assets/images/logo-02.png" alt="網站標題" class="hero-image">
     <p data-aos="fade-up" data-aos-delay="200">探索 × 反思 × 重生</p>
